--- a/src/main/java/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/java/META-INF/additional-spring-configuration-metadata.json
@@ -1,25 +1,27 @@
-{"properties": [
-  {
-    "name": "http.proxy",
-    "type": "java.net.URL",
-    "description": "The http proxy to be used"
-  },
-  {
-    "name": "no.nav.foreldrepenger.historikk.kafka.meldinger.topic",
-    "type": "java.lang.String",
-    "description": "The topic to consume from"
-  },
-  {
-    "name": "no.nav.foreldrepenger.historikk.oppslag.enabled",
-    "type": "java.lang.String",
-    "description": "A description for 'no.nav.foreldrepenger.historikk.oppslag'"
-  },
-  {
-    "name": "no.nav.security.oidc.issuer.selvbetjening",
-    "description": "A description for 'no.nav.security.oidc.issuer.selvbetjening'"
-  },
-  {
-    "name": "no.nav.security.oidc.issuers",
-    "description": "A description for 'no.nav.security.oidc.issuers'"
-  }
-]}
+{
+	"properties": [
+		{
+			"name": "http.proxy",
+			"type": "java.net.URL",
+			"description": "The http proxy to be used"
+		},
+		{
+			"name": "no.nav.foreldrepenger.historikk.kafka.meldinger.topic",
+			"type": "java.lang.String",
+			"description": "The topic to consume from"
+		},
+		{
+			"name": "no.nav.foreldrepenger.historikk.oppslag.enabled",
+			"type": "java.lang.String",
+			"description": "A description for 'no.nav.foreldrepenger.historikk.oppslag'"
+		},
+		{
+			"name": "no.nav.security.oidc.issuer.selvbetjening",
+			"description": "A description for 'no.nav.security.oidc.issuer.selvbetjening'"
+		},
+		{
+			"name": "no.nav.security.oidc.issuers",
+			"description": "A description for 'no.nav.security.oidc.issuers'"
+		}
+	]
+}
