--- a/src/main/resources/application-preprod.yaml
+++ b/src/main/resources/application-preprod.yaml
@@ -8,7 +8,7 @@ management:
          show-details: always
 
 dokarkiv:
-   service: http://dokarkiv-q1
+   service: https://dokarkiv-q1.nais.preprod.local
             
 spring:
    http:
