--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
     </dependencyManagement>
     <dependencies>
         <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.15</version>
+        </dependency>
+        <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
             <artifactId>caffeine</artifactId>
         </dependency>
@@ -163,12 +168,12 @@
             <artifactId>resilience4j-retry</artifactId>
             <version>0.16.0</version>
         </dependency>
-          <dependency>
+        <dependency>
             <groupId>io.github.resilience4j</groupId>
             <artifactId>resilience4j-rxjava2</artifactId>
             <version>0.16.0</version>
-        </dependency> 
-         <dependency>
+        </dependency>
+        <dependency>
             <groupId>io.reactivex.rxjava2</groupId>
             <artifactId>rxjava</artifactId>
         </dependency>
