--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,15 +3,15 @@ jobs:
    build:
      working_directory: ~/fpinfo-historikk 
      docker:
-      - image: circleci/openjdk:8-jdk-browsers
+       - image: circleci/openjdk:8-jdk-browsers
      steps:
        - checkout
        - restore_cache: 
           key: fpinfo-historikk-{{ checksum "pom.xml" }}
       
-      - run: mvn dependency:go-offline # gets the project dependencies
+       - run: mvn dependency:go-offline # gets the project dependencies
       
-      - save_cache: # saves the project dependencies
+       - save_cache:
           paths:
             - ~/.m2
           key: fpinfo-historikk-{{ checksum "pom.xml" }}
