--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
    build:
      working_directory: ~/fpinfo-historikk 
      docker:
-       - image: circleci/openjdk:8-jdk-browsers
+       - image: circleci/openjdk:8u171-jdk
      steps:
        - checkout
        - restore_cache: 
