--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,11 +16,15 @@ jobs:
             - ~/.m2
           key: fpinfo-historikk-{{ checksum "pom.xml" }}
        - run: mvn test 
-       - run:    command: |
-             mkdir -p ~/test-results/junit/
-             find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
+       - run:
+           name: Save test results
+           command: |
+            mkdir -p ~/junit/
+            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/junit/ \;
            when: always
+
        - store_test_results:
-          path: ~/test-results
+           path: ~/junit
+
        - store_artifacts:
-          path: ~/test-results/junit    
+           path: ~/junit   
