--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,12 +19,12 @@ jobs:
        - run:
            name: Save test results
            command: |
-            mkdir -p ~/junit/
-            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/junit/ \;
+             mkdir -p ~/test-results/junit/
+             find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
            when: always
 
        - store_test_results:
-           path: ~/junit
+          path: ~/test-results
 
        - store_artifacts:
-           path: ~/junit   
+          path: ~/test-results/junit         
