--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ orbs:
   nais: navikt/nais-deployment:1.1.1
   workflow:
    deploy-docker-and-nais:  
-     jobs:
+     steps:
        - checkout
        - restore_cache: 
           key: fpinfo-historikk-{{ checksum "pom.xml" }}
