--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,22 @@
 version: 2
+orbs:
+  nais: navikt/nais-deployment:1.1.1
+  workflow:
+  deploy-docker-and-nais:
+    jobs:
+      - nais/deploy:
+          context: NAIS deployment
+          repo: navikt/fpinfo-historikk
+          image: navikt/fpinfo-historikk
+          github-app-id: 20250
+          nais-template: nais.yaml
+          environment: dev-fss
+          team: teamforeldrepenger
 jobs:
    build:
      working_directory: ~/fpinfo-historikk 
      docker:
        - image: circleci/openjdk:8u171-jdk
-orbs:
-  nais: navikt/nais-deployment:1.1.1
-  workflow:
-   deploy-docker-and-nais:  
      steps:
        - checkout
        - restore_cache: 
@@ -31,15 +40,5 @@ orbs:
           path: ~/test-results
 
        - store_artifacts:
-          path: ~/test-results/junit    
-       - nais/deploy:
-          requires:
-            - store_artifacts
-          context: NAIS deployment
-          repo: navikt/fpinfo-historikk
-          image: navikt/fpinfo-historikk
-          github-app-id: 20250
-          nais-template: nais.yaml
-          environment: dev-fss
-          team: teamforeldrepenger
-         
+          path: ~/test-results/junit 
+          
