--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
           image: navikt/fpinfo-historikk
           
 workflow:
-  deploy-docker-and-nais:
+  deploy-nais:
     jobs:
       - build:
           context: NAIS deployment
