--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,9 +9,9 @@ jobs:
        - image: circleci/openjdk:8u171-jdk
      steps:
        - checkout
-       - run 
-          command:  |
-             openssl aes-256-cbc -K $OPENSSL_KEY -iv $OPENSSL_IV -in .circleci/github.key.pem.enc -out .circleci/github.key.pem -d
+       
+       - nais/decrypt-private-key:
+       
        - restore_cache: 
           key: fpinfo-historikk-{{ checksum "pom.xml" }}
       
