--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,19 +31,16 @@ jobs:
 
        - store_artifacts:
           path: ~/test-results/junit  
-          
-       - nais/docker-deploy:
-          image: navikt/fpinfo-historikk
+         
           
 workflows:
    version: 2
    deploy-nais:
      jobs:
-      - nais/decrypt-private-key:
       - build:
           context: NAIS deployment
       - nais/deploy:
-          build-and-push-docker-image: false
+          build-and-push-docker-image: true
           context: NAIS deployment
           repo: navikt/fpinfo-historikk
           image: navikt/fpinfo-historikk
