--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,8 @@ jobs:
           
        - nais/docker-deploy:
           image: navikt/fpinfo-historikk
+          
+       - nais/decrypt-private-key
 workflows:
    version: 2
    deploy-nais:
