--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
        - persist_to_workspace:
           root: ~ 
           paths:
-           - .circeci  
+           - .circleci  
           
 workflows:
    version: 2
