--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -9,25 +9,16 @@ jobs:
     kompiler:
         runs-on: ubuntu-latest
         steps:
-            - name: Sjekk ut kode
-              uses: actions/checkout@v2
-
-            - name: Hent Maven cache
-              uses: actions/cache@v2.1.6
-              with:
-                  path: ~/.m2/repository
-                  key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-                  restore-keys: ${{ runner.os }}-maven-
-
+            - uses: actions/checkout@v2
             - name: Sett opp Java 15
               uses: actions/setup-java@v2
               with:
                   java-version: 15
                   distribution: 'adopt'
+                  cache: 'maven'
 
             - name: Kompiler
               run: |
                   mvn package  --settings .github/.m2/settings.xml
               env:
-                  GITHUB_USERNAME: x-access-token
-                  GITHUB_PASSWORD: ${{ secrets.GITHUB_TOKEN }} # Hvis repo blir avhengig av private biblioteker trengs en PAT.
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Hvis repo blir avhengig av private biblioteker trengs en PAT.
