--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,32 +16,18 @@ jobs:
               run: |
                   echo "TAG=$(date +%Y.%m.%d.%H%M%S)-$(echo $GITHUB_SHA | cut -c1-7)" >> $GITHUB_ENV
 
-            - name: Set cache key
-              run: |
-                  echo "CACHE_KEY=$(expr $(date +%V) - 1 + 1)" >> $GITHUB_ENV
-                  echo "PREVIOUS_CACHE_KEY=$(expr $(date +%V) - 1)" >> $GITHUB_ENV
-
-            - name: Henter maven avhengigheter som er cachet
-              uses: actions/cache@v2.1.6
-              with:
-                  path: ~/.m2
-                  key: ${{ runner.os }}-maven-${{ env.CACHE_KEY }}
-                  restore-keys: |
-                      ${{ runner.os }}-maven-${{ env.PREVIOUS_CACHE_KEY }}
-
             - uses: actions/setup-java@v2
               with:
                   distribution: 'adopt'
                   java-version: 15
+                  cache: 'maven'
 
             - name: Kompiler
               run: |
                   mvn versions:set -DnewVersion=${TAG}
                   mvn clean install --batch-mode --quiet --settings .github/.m2/settings.xml
               env:
-                  GITHUB_USERNAME: x-access-token
-                  GITHUB_PASSWORD: ${{ secrets.GITHUB_TOKEN }} # Hvis repo blir avhengig av private biblioteker trengs en PAT.
-
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Hvis repo blir avhengig av private biblioteker trengs en PAT.
 
             - name: Login to GitHub Packages Docker Registry
               uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9 # Use commit-sha1 instead of tag for security concerns
@@ -79,25 +65,26 @@ jobs:
             - uses: navikt/github-app-token-generator@v1
               id: get-token
               with:
-               private-key: ${{ secrets.FP_PRIVATE_KEY }}
-               app-id: ${{ secrets.FP_APP_ID }}
+                  private-key: ${{ secrets.FP_PRIVATE_KEY }}
+                  app-id: ${{ secrets.FP_APP_ID }}
 
             - name: Opprett issue, trigg deploy til dev-fss
               if: success()
               uses: actions/github-script@v4.1
               with:
-                github-token: ${{ steps.get-token.outputs.token }}
-                script: |
-                    github.issues.create( {
-                      owner: context.issue.owner,
-                      repo: context.issue.repo,
-                      labels: ['bygg'],
-                      title: 'Deploy av ${{ env.TAG }}'})
-                    .then(response => {
-                            const issue = { owner: context.issue.owner,
-                            repo: context.issue.repo,
-                            issue_number: response.data.number }
-                           github.issues.createComment({...issue,
-                                  title: 'Deploy av ${{ env.TAG }}',
-                                  body: '/promote dev-fss '})
-                     });
+                  github-token: ${{ steps.get-token.outputs.token }}
+                  script: |
+                      github.issues.create( {
+                        owner: context.issue.owner,
+                        repo: context.issue.repo,
+                        labels: ['bygg'],
+                        title: 'Deploy av ${{ env.TAG }}',
+                        body: '${{ github.sha }}'})
+                      .then(response => {
+                              const issue = { owner: context.issue.owner,
+                              repo: context.issue.repo,
+                              issue_number: response.data.number }
+                             github.issues.createComment({...issue,
+                                    title: 'Deploy av ${{ env.TAG }}',
+                                    body: '/promote dev-fss '})
+                       });
