--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,11 +80,25 @@ jobs:
                         labels: ['bygg'],
                         title: 'Deploy av ${{ env.TAG }}',
                         body: '${{ github.sha }}'})
-                      .then(response => {
-                              const issue = { owner: context.issue.owner,
-                              repo: context.issue.repo,
-                              issue_number: response.data.number }
-                             github.issues.createComment({...issue,
-                                    title: 'Deploy av ${{ env.TAG }}',
-                                    body: '/promote dev-fss '})
-                       });
+      
+            - name: Trigg deploy til dev-fss
+              if: success()
+              run: |
+                   curl -XPOST -u "x-access-token:${{ steps.get-token.outputs.token }}" \
+                   -H "Accept: application/vnd.github.v3+json" \
+                   https://api.github.com/repos/${{ github.event.inputs.trigger }}/dispatches \
+                   -d '{
+                         "event_type": "promote-command",
+                         "client_payload": {
+                           "github": {
+                               "payload": {
+                                   "issue": {
+                                       "number": "${{ steps.createdeployissue.outputs.number }}"
+                           }}},
+                           "slash_command": {
+                               "args": {
+                                   "unnamed": {
+                                       "arg1": "dev-fss",
+                                       "arg2": "teamforeldrepenger"
+                           }}}
+                         }'
