--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,17 +62,11 @@ jobs:
                         });
                       });
 
-            - uses: navikt/github-app-token-generator@v1
-              id: get-token
-              with:
-                  private-key: ${{ secrets.FP_PRIVATE_KEY }}
-                  app-id: ${{ secrets.FP_APP_ID }}
-
             - name: Opprett issue, trigg deploy til dev-fss
               if: success()
               uses: actions/github-script@v4.1
               with:
-                  github-token: ${{ steps.get-token.outputs.token }}
+                  github-token: ${{ secrets.GITHUB_TOKEN }}
                   script: |
                       github.issues.create( {
                         owner: context.issue.owner,
@@ -84,9 +78,9 @@ jobs:
             - name: Trigg deploy til dev-fss
               if: success()
               run: |
-                   curl -XPOST -u "x-access-token:${{ steps.get-token.outputs.token }}" \
+                   curl -XPOST -u "x-access-token:${{ secrets.GITHUB_TOKEN }}" \
                    -H "Accept: application/vnd.github.v3+json" \
-                   https://api.github.com/repos/${{ github.event.inputs.trigger }}/dispatches \
+                   https://api.github.com/repos/${{ github.repository }}/dispatches \
                    -d '{
                          "event_type": "promote-command",
                          "client_payload": {
@@ -98,7 +92,6 @@ jobs:
                            "slash_command": {
                                "args": {
                                    "unnamed": {
-                                       "arg1": "dev-fss",
-                                       "arg2": "teamforeldrepenger"
+                                       "arg1": "dev-fss"
                            }}}
                          }'
