--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -10,10 +10,9 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
-            - name: Sett opp Java 15
-              uses: actions/setup-java@v2
+            - uses: actions/setup-java@v2
               with:
-                  java-version: 15
+                  java-version: 17
                   distribution: 'adopt'
                   cache: 'maven'
 
