--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,16 +12,14 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
-            - name: Hent tag
-              run: |
-                  echo "TAG=$(date +%Y.%m.%d.%H%M%S)-$(echo $GITHUB_SHA | cut -c1-7)" >> $GITHUB_ENV
-
             - uses: actions/setup-java@v2
               with:
                   distribution: 'adopt'
-                  java-version: 15
+                  java-version: 17
                   cache: 'maven'
 
+            - name: Hent tag
+              run: echo "TAG=$(date +%Y.%m.%d.%H%M%S)-$(echo $GITHUB_SHA | cut -c1-7)" >> $GITHUB_ENV
             - name: Kompiler
               run: |
                   mvn versions:set -DnewVersion=${TAG}
