--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <confluent.version>6.2.0</confluent.version>
         <token-validation-version>1.3.19</token-validation-version>
-        <springfox.version>3.0.0</springfox.version>
+        <springdoc.version>1.6.6</springdoc.version>
         <timestamp>${maven.build.timestamp}</timestamp>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
     </properties>
@@ -155,9 +155,9 @@
             <artifactId>caffeine</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-boot-starter</artifactId>
-            <version>${springfox.version}</version>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>${springdoc.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
