--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -114,3 +114,7 @@ spring:
          transaction-id-prefix: tx.
    main:
       banner-mode: 'off'
+springdoc:
+    packages-to-scan: no.nav.foreldrepenger.historikk
+    swagger-ui:
+        disable-swagger-default-url: true
