--- a/src/main/resources/application-dev-fss.yml
+++ b/src/main/resources/application-dev-fss.yml
@@ -16,11 +16,30 @@ management:
          show-details: always
 historikk:
    dittnav:
-      enabled: true       
+      enabled: true
    tilbakekreving:
       enabled: true
-      topic: privat-tilbakekreving-brukerdialog-q1    
+      topic: privat-tilbakekreving-brukerdialog-q1
 spring:
+   config.import: vault://
+   cloud:
+      vault:
+         enabled: true
+         uri: https://vault.adeo.no
+         database:
+            enabled: true
+            role: fpinfo-historikk-preprod-admin
+            backend: postgresql/preprod-fss
+         authentication: KUBERNETES
+         kubernetes:
+            role: fpinfo-historikk
+            kubernetes-path: kubernetes/preprod/fss
+            service-account-token-file: /var/run/secrets/kubernetes.io/serviceaccount/token
+         kv:
+            enabled: true
+            backend: kv/preprod/fss
+            application-name: fpinfo-historikk/teamforeldrepenger
+            default-context: fpinfo-historikk/teamforeldrepenger
    datasource:
       url: jdbc:postgresql://b27dbvl007.preprod.local:5432/fpinfo-historikk-preprod
    mvc:
