--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -24,6 +24,9 @@ historikk:
 server:
    port: 9001
 spring:
+   cloud:
+      vault:
+         enabled: false
    output:
     ansi:
       enabled: always
