--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -36,11 +36,11 @@ jobs:
             - run: git checkout HEAD
               if: ${{ github.event_name == 'pull_request' }}
 
-            - name: Set up JDK 15
+            - name: Set up JDK 17
               uses: actions/setup-java@v2
               with:
-                  distribution: 'adopt'
-                  java-version: '15'
+                  distribution: 'temurin'
+                  java-version: '17'
                   cache: 'maven'
 
             # Initializes the CodeQL tools for scanning.
