--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <token-validation-version>1.3.19</token-validation-version>
         <springdoc.version>1.6.6</springdoc.version>
         <spring-cloud.version>3.1.0</spring-cloud.version>
+        <spring-kafka.version>2.7.10</spring-kafka.version> <!-- downgraded to support on prem cluster -->
         <timestamp>${maven.build.timestamp}</timestamp>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
     </properties>
@@ -171,6 +172,7 @@
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
+            <version>${spring-kafka.version}</version>
         </dependency>
         <dependency>
             <groupId>org.flywaydb</groupId>
