--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -112,7 +112,7 @@ kafka:
     truststore-type: jks
   onprem:
     sasl-mechanism: PLAIN
-    security-protocol-config: SASL_PLAINTEXT
+    security-protocol-config: SASL_SSL
     jaas-config: org.apache.kafka.common.security.plain.PlainLoginModule required username=${system.username} password=${system.password};
     consumer-enable-auto-commit: false
     bootstrap-servers: a01apvl00145.adeo.no:8443,a01apvl00146.adeo.no:8443,a01apvl00147.adeo.no:8443
